fix: modified spacing in the first section

--- a/style.css
+++ b/style.css
@@ -79,6 +79,13 @@ h2 {
 }
 /*--- /Buttons ---*/
 
+/*--- Hover ---*/
+.btn:hover {
+    background-color: rgba(0,0,0,0.5);
+    transition-duration: 0.2s;
+    color: white;
+}
+
 /******************
       HEADER
 ******************/
@@ -148,11 +155,11 @@ header a {
     height: 100%;
     display: flex;
     flex-direction: column;
-
+    padding: 30px;
 }
 
-#intro h3, #intro p, #intro i, #intro button {
-    margin: 30px 20px;
+#intro h3 {
+    margin: 30px 0;
 }
 
 #intro .big-col {
@@ -178,6 +185,7 @@ header a {
 
 #intro button {
     width: 160px;
+    margin-top: 45px;
 }
 
 #intro .big-col .card div:first-child i {
@@ -185,7 +193,7 @@ header a {
 }
 
 #intro i {
-    font-size: 60px;
+    font-size: 70px;
 }
 
 #intro i, #intro h3 {
@@ -408,6 +416,7 @@ header a {
 #about-us .img {
     width: 150px;
     height: 150px;
+    position: relative;
 }
 
 #about-us img {
@@ -419,10 +428,17 @@ header a {
     width: 50%;
 }
 
+#about-us .fa-quote-left {
+    color: #9792e4;
+    font-size: 50px;
+    position: absolute;
+    right: 0;
+}
+
 #about-us h3 {
     color: #9792e4;
     line-height: 24px;
-    margin: 15px 0;
+    margin: 30px 0;
 }
 
 #about-us button {
@@ -462,6 +478,10 @@ header a {
     font-size: 70px;
     color: #fdc15f;
     margin: 30px 0;
+}
+
+#get-started i {
+    font-size: 6px;
 }
 
 #get-started .col .btn {
